23-frenchuserguide =>
- ADDED unit tests for load / save
- Maven now separates unit & functional tests (see README.md)