@@ -65,24 +65,17 @@
       <version>${itext.version}</version>
     </dependency>
 
-    <!-- JAXB API v4.0.0 -->
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>4.0.0</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jakarta.activation</groupId>
-          <artifactId>jakarta.activation-api</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
-    <!-- JAXB v3.0.2 reference implementation (curiously with com.sun coordinates) -->
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
       <artifactId>jaxb-impl</artifactId>
-      <version>3.0.2</version>
+      <version>4.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
@@ -179,7 +172,7 @@
         <version>1.6.2</version>
         <executions>
           <execution>
-            <phase>package</phase>
+            <phase>install</phase>
             <goals>
               <goal>package</goal>
             </goals>
@@ -234,14 +227,12 @@
         <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
         <version>${test-plugins.version}</version>
         <configuration>
-          <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
-          </additionalClasspathElements>
-          <forkCount>1</forkCount>
-          <useSystemClassLoader>true</useSystemClassLoader>
+          <skipTests>${skipUTs}</skipTests>
+          <includes>
+            <include>**/unittest/**</include>
+          </includes>
           <excludes>
-            <exclude>**/*FunctionalTest</exclude>
+            <exclude>**/functionaltest/**</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -251,9 +242,9 @@
         <version>${test-plugins.version}</version>
         <executions>
           <execution>
+            <phase>test</phase>
             <goals>
               <goal>integration-test</goal>
-              <goal>verify</goal>
             </goals>
           </execution>
         </executions>
@@ -261,12 +252,13 @@
           <forkCount>1</forkCount>
           <useSystemClassLoader>true</useSystemClassLoader>
           <includes>
-            <include>**/*FunctionalTest</include>
+            <include>**/functionaltest/**</include>
           </includes>
+          <excludes>
+            <exclude>**/unittest/**</exclude>
+          </excludes>
           <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
-          <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>
-          </additionalClasspathElements>
+          <skipITs>${skipFTs}</skipITs>
         </configuration>
       </plugin>
 
